atualizei o ex22 do cap 18

--- a/exercicios/ex22/fundo006.html
+++ b/exercicios/ex22/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthando - background
+                color > image > position > repeat > [size] > attachment
+            */
+            
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,6 +38,9 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus reiciendis laboriosam sint beatae dolor sapiente soluta, debitis expedita cum perspiciatis nihil iste nobis architecto officiis rem necessitatibus qui, quas quis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos iusto facere quis facilis accusamus labore, fuga omnis velit itaque provident sequi impedit nulla voluptates corrupti consequatur asperiores maxime quibusdam eum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis incidunt distinctio nobis libero a mollitia. Aspernatur possimus doloribus fuga numquam, culpa similique vero, quo est dolore aliquid blanditiis. Architecto, pariatur.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non repudiandae reprehenderit placeat nihil! Temporibus animi, consequatur totam, optio voluptatem autem sed dolorum exercitationem fuga vitae ut quo, officia voluptatum! Repellat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa repudiandae iure adipisci harum voluptatibus, distinctio qui. Debitis deserunt tenetur delectus, facilis perferendis eligendi laborum consectetur fuga dolorem perspiciatis at.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ipsum quidem minus, molestias a id repellendus explicabo est vel maiores facere dolorum obcaecati laboriosam consequuntur fugit non beatae at corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi voluptatem optio vel autem at eum quasi corporis nisi quam, sint, earum mollitia laborum culpa perspiciatis, in deserunt hic accusantium voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus fugit exercitationem tempora molestias quas accusantium illo. Perferendis, minima, explicabo commodi sed rerum eum labore hic facere, deleniti est molestiae doloremque.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias sint fuga accusamus recusandae sunt ipsa sequi magnam iure. Pariatur magnam reprehenderit dolor sunt consequuntur ut molestias rerum quae quo dignissimos! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias provident magnam praesentium fuga commodi ab amet! Consectetur porro ipsam quasi perspiciatis, odit enim maiores, odio, tempora obcaecati eos veniam blanditiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi ut, nisi impedit, eius veniam expedita praesentium illo facilis vero, accusamus sunt dignissimos voluptate aliquam quam laborum facere sed reiciendis?</p>
     </main>
 </body>
 </html>
