--- a/desafios/desafio12/desafio12.html
+++ b/desafios/desafio12/desafio12.html
@@ -25,7 +25,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -59,7 +59,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -72,6 +72,15 @@
     </section>
 
     <section class="normal">
+        <p>
+            Agora, escrevo e envio <br>
+            Chegando na mesma hora <br>
+            Mas quando vou prosear <br>
+            A pessoa foi embora <br>
+            Abriu outro aplicativo <br>
+            O mundo ficou cativo <br>
+            Da tecnologia do agora.
+        </p>
         <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
